# afnmr

./: LICENSE  Makefile  README.md  excludes  mkdirs  mkrelease
basis/: BASIS  aug-pcsseg-0.1.gbs  aug-pcsseg-1.1.gbs  aug-pcsseg-2.1.gbs  aug-pcsseg-3.1.gbs  aug-pcsseg-4.1.gbs  pcj-0.1.gbs  pcj-1.1.gbs  pcj-2.1.gbs  pcseg-0.1.gbs  pcseg-1.1.gbs  pcsseg-0.1.gbs  pcsseg-0.in  pcsseg-1.1.gbs  pcsseg-1.in  pcsseg-2.1.gbs  pcsseg-2.in  pcsseg-3.1.gbs  pcsseg-4.1.gbs
basis/pcJ-2/: C.gbs  Cl.gbs  F.gbs  H.gbs  Mg.gbs  N.gbs  Na.gbs  O.gbs  P.gbs  S.gbs  Si.gbs
basis/pcSseg-0/: pcSseg-0.gbs
basis/pcSseg-1/: C.gbs  Cl.gbs  F.gbs  H.gbs  N.gbs  O.gbs  P.gbs  S.gbs  pcSseg-1.gbs
basis/pcSseg-2/: C.gbs  Cl.gbs  F.gbs  H.gbs  N.gbs  O.gbs  P.gbs  S.gbs  pcSseg-2.gbs
dat/leap/cmd/: leaprc.DNA.OL21  leaprc.RNA.LJbb  leaprc.fluorine.ff15ipq  leaprc.gaff2  leaprc.phosfb18  leaprc.protein.ff14SB_modAA  leaprc.protein.ff19SB_modAA  (+4 more)
dat/rism1d/: cSPCE_pse2.xvv
doc/: afnmr.lyx
src/: Makefile  config.h  libgfortran.sh
src/MEAD/: AccTag.h  AnalyMaker.cc  AnalyMaker.h  AnalySlab.cc  AnalySlab.h  AnalySphere.cc  AnalySphere.h  Angle.cc  Angle.h  Atom.cc  Atom.h  AtomChargeSet.cc  AtomChargeSet.h  AtomID.cc  AtomID.h  AtomSet.cc  AtomSet.h  AvsSF_read_header.cc  AvsScalarField.cc  AvsScalarField.h  AvsScalarField_input.cc  Bigmem.cc  Bigmem.h  CLShell.cc  CLShell.h  CenteringStyle.h  ChargeCubeRep.cc  ChargeCubeRep.h  ChargeDist.cc  ChargeDist.h  Cone.h  Coord.h  CubeLatSpec.cc  CubeLatSpec.h  Debye.cc  Debye.h  DielByAtoms.cc  DielByAtoms.h  DielCubeRep.cc  DielCubeRep.h  (+77 more)
src/afnmr/: Makefile  afnmr  afnmr.F90  afnmr_ringcur_correct.py  checkio.c  deMon_multiafnmr_prep.sh  get_hlypqr  getshifts-demon  getshifts-demon3  getshifts-g09  getshifts-gau  getshifts-jaguar  getshifts-orca  getshifts-qchem  gettensor  gettensor-gau  gettensor-orca  gettensor-qchem  gridprune.F90  log_to_hlypqr  lsq.c  make-shiftsrdb  make-tensorrdb  make_rdball  memutil.c  ms.f  multiafnmr.sh  nmrfx-predict  number.c  pair.c  plot_na_shifts.sh  plot_protein_shifts.py  plotshifts.py  pof.c  scatterplot.c  strings.c  txmin.c  unixstat.h  xyz_to_pdb
src/arpack/: dnaitr.f  dnaupd.f  dsaitr.f  dsaupd.f
src/blas/: Makefile
src/cifparse/: CMakeLists.txt  Makefile  cifparse.l  cifparse.y
src/etc/: CMakeLists.txt  Makefile  Solvate.sh  add_pdb.F90  ambpdb.F90  amopen.F90  charmmlipid2amber.py  cpinutil.py  finddgref.py  fitpkaeo.py  fixremdcouts.py  genremdinputs.py  make_nmd.py  mdout_analyzer.py  mexit.F90  nxtsec.F90  pymol_nmodes.py  resp.F  setup.py
src/etc/mdoutanalyzer/: graphproperties.py  mdout.py  menus.py  toplevel_app.py  widgets.py  windows.py
src/include/: dprec.fh  md.h
src/lapack/: CMakeLists.txt  Makefile
src/leap/: CMakeLists.txt  Makefile  amber.c  basics.c  basics.h  commands.c  depend  getline.c  helptext.c  helptext.text  parser.c  parser.y  pdbFile.c  tleap  tleap.bat  unit.c  unitio.c  utilMakeHelp  zMatrix.c
src/leap/src/: CMakeLists.txt
src/leap/src/leap/: CMakeLists.txt  Makefile  amber.c  atom.c  commands.c  depend  getline.c  library.c  model.c  octree.c  parmSet.c  parser.y  pdbFile.c  residue.c  tLeap.c  unit.c  unitio.c
src/pbsa/: CMakeLists.txt  GrToPr.F90  Makefile  band2csr.cpp  band2csr.h  bicg.F90  box.h  copyright.h  copyright_c.h  cuda_cg_wrapper.cu  cuda_mg_wrapper.cu  cuda_mg_wrapper.h  curv.F90  debug.F90  decomp.F90  density.F90  depend  dsvdc.F90  egb.F90  ene.F90  force.F90  gen_dx_file.F90  getcoor.F90  gmres.F90  gopt.c  gopt.h  helper_cuda.h  indexg.F90  interface.c  interpX.F90  irre31.F90  irre32.F90  jumps.F90  locmem.F90  makedepend  memory_module.F90  miniop.F90  np_force.F90  parms.F90  pb_anaiim.F90  (+42 more)
src/rism/: .cvsignore  .gitignore  CMakeLists.txt  ChangeLog.org  Makefile  README.md  TODO.org  amber_rism_interface.F90  bspline.F90  constants.F90  dcpval.F90  def_time.h  depend  dqagie.F90  dqelg.F90  dqk15i.F90  dqk15i.F90~  dqpsrt.F90  dsi.F90  erfcfun.F90  fce_c.F90  fftw3.F90  getopts_c.F90  makedepend  mdiis_blas2_c.F90  mdiis_blas_c.F90  mdiis_c.F90  mdiis_orig_c.F90  pubfft.F90  quaternion.F90  rism.Doxyfile  rism1d.F90  rism1d_c.F90  rism1d_closure_c.F90  rism1d_devb_c.F90  rism1d_hnc_c.F90  rism1d_kh_c.F90  rism1d_mv0_c.F90  rism1d_nub_c.F90  rism1d_polyt_c.F90  (+36 more)
src/rism/getline/: getline.c  getline.h
src/rism/pmepot/: fort.sh  pmepot.cpp  pmepot.hpp  pmepotDriver.cpp  pmepotFDriver.f03  run.sh
src/rism/pmepot/solute/: PH4+.crd  PH4+.mol2  PH4+.prmtop  PH4+_tleap.in  README
src/sff/: AmberNetcdf.F90  AmberNetcdf.c  AmberNetcdf.h  AmberNetcdf_dummy.c  CMakeLists.txt  Makefile  eff.c  hcp.c  hcp_gb.c  lmodC.c  mm_options.l  nmode.c  prm.c  sff.c  sff.h
src/sff/pubpme/: 0README  pme_text
src/sff/pubpme/driver_src/: DOC_SRC  Makefile  chk_exactness.f  dr_pme_recip.f  dr_reg_recip.f  erfcfun.c  exact.f  filter_pdb.f
src/sff/pubpme/erfc_spline/: Makefile  README  erfc_locmem.f  erfc_spline.f  erfc_spline.inc  erfcfun.c  sample_use.f
src/sff/pubpme/pme_recip/: bspline.f  charge_grid.f  fftcalls.f  pmesh_kspace.f
src/sff/pubpme/pme_recip/f2c/: Makefile  bspline.c  charge_grid.c  fftcalls.c  pmesh_kspace.c
src/sff/pubpme/pubfft/: Makefile  README  cfftb.f  cfftb1.f  cfftf.f  cfftf1.f  cffti.f  cffti1.f  passb.f  passb2.f  passb3.f  passb4.f  passb5.f  passf.f  passf2.f  passf3.f  passf4.f  passf5.f  pub3dfft.f
src/sff/pubpme/pubfft/f2c/: Makefile  cfftb.c  cfftb1.c  cfftf.c  cfftf1.c  cffti.c  cffti1.c  passb.c  passb2.c  passb3.c  passb4.c  passb5.c  passf.c  passf2.c  passf3.c  passf4.c  passf5.c  pub3dfft.c
src/sff/pubpme/reg_recip/: Makefile  reg_kspace.c  reg_kspace.f  reg_kspace.f.orig
src/sff/pubpme/vpme_recip/: Makefile  README  bspline.f  charge_grid.f  fftcalls.f  pmesh_kspace.f
test/: Makefile  Makefile.afnmr  dacdif
test/afnmr/: 1d3z1002.xyz.save  1d3z1003.com.save  1d3z1003.inp.save  1d3z1003.orcainp.save  1d3z1003.pos.save  1d3z1003.pqr.save  1d3z1005.in.save  1d3z1006.inp.save  1d3z1006.pqr.save  1d3z1007.in.save  Makefile  m6ab.1.pqr  m6ab.1006.inp.save  m6ab.1006.pqr.save  xtb_opt.xyz
(+33 files in other folders)
